# DjangoProject_Catalog

./: README.md  pyproject.toml
