[tool.poetry]
name = "Catalog_DjangoProject"
version = "0.2.0"
description = ""
authors = ["Paul <p.bitiakov.official@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
psycopg2 = "^2.9.10"
binary = "^1.0.0"
black = "^24.8.0"
pillow = "^11.4.0"
ipython = "^8.29.0"
django-phonenumber-field = {extras = ["phonenumbers"], version = "^8.0.0"}
redis = "^5.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
